Implemented PR suggestions